--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   geolocator: ^9.0.2
+  flutter_polyline_points: ^2.0.0 
+  url_launcher: ^6.1.14 
   geocoding: ^2.1.0
   provider: ^6.1.2
 dev_dependencies:
