--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  shared_preferences: ^2.0.13
   cupertino_icons: ^1.0.8
   firebase_core: ^3.12.0
   firebase_auth: ^5.5.0
